force-app/main/default/objects/SuperComputing_RFI_RFP_Tracking__c/SuperComputing_RFI_RFP_Tracking__c.object-meta.xml
<CustomObject>
    <description>SuperComputing RFI/RFP Tracking for Tesla Sales Opportunity Record Type</description>
    <label>SuperComputing RFI/RFP Tracking</label>
    <nameField>
        <label>SuperComputing RFI/RFP Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SuperComputing RFI/RFP Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>