force-app/main/default/objects/SuperComputing_RFI_RFP_Tracking__c/fields/Deal_Checklist_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Checklist_Due_Date__c</fullName>
    <formula>Release_Date__c - 60</formula>
    <label>Deal Checklist Due Date</label>
    <type>Date</type>
</CustomField>