force-app/main/default/objects/SuperComputing_RFI_RFP_Tracking__c/fields/Deal_Checklist_Link__c.field-meta.xml
<CustomField>
    <fullName>Deal_Checklist_Link__c</fullName>
    <label>Deal Checklist Link</label>
    <type>Url</type>
</CustomField>