force-app/main/default/objects/SuperComputing_RFI_RFP_Tracking__c/fields/Request_Types__c.field-meta.xml
<CustomField>
    <fullName>Request_Types__c</fullName>
    <label>Request Types</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>