force-app/main/default/objects/SuperComputing_RFI_RFP_Tracking__c/fields/Response_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Due_Date__c</fullName>
    <label>Response Due Date</label>
    <type>Date</type>
</CustomField>