force-app/main/default/objects/SuperComputing_RFI_RFP_Tracking__c/fields/Tesla_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Tesla_Opportunity__c</fullName>
    <label>Tesla Opportunity</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Opportunity.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>SalesOpportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SuperComputing RFI/RFP Trackings</relationshipLabel>
    <relationshipName>SuperComputing_RFI_RFP_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>