force-app/main/default/objects/SuperComputing_RFI_RFP_Tracking__c/fields/Throughput_Calculator_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Throughput_Calculator_Due_Date__c</fullName>
    <formula>Release_Date__c  - 60</formula>
    <label>Throughput Calculator Due Date</label>
    <type>Date</type>
</CustomField>