force-app/main/default/objects/SuperComputing_RFI_RFP_Tracking__c/fields/Throughput_Calculator_Output_Link__c.field-meta.xml
<CustomField>
    <fullName>Throughput_Calculator_Output_Link__c</fullName>
    <label>Throughput Calculator Output Link</label>
    <type>Url</type>
</CustomField>